--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="name card">
         <h1>Nadia's</h1>
         <h2>Porfolio</h2>
-        <img src="assets/images/power.png" alt="green play picture" height="100px">
+        <img src="./images/power.png" alt="green play picture" height="100px">
     </div>
     <div class="about card">
         <h2>About me</h2>
